--- a/head.css
+++ b/head.css
@@ -8,14 +8,14 @@
   transition-property: opacity;
   transition-duration: 600ms;
   will-change: transform, border-radius, opacity;
-  animation: scaleCirc 2.5s infinite ease-in-out;
-  border: 1px solid rgb(202 204 255 / 25%);
+  animation: scaleCirc 2.5s infinite;
+  border: 1px solid rgb(202 204 255 / 30%);
   z-index: -2;
 }
 
 .talent_bg-globe-circ.is-small {
   animation: scaleCirc 2.5s infinite;
-  animation-delay: 750ms;
+  animation-delay: 500ms;
 }
 
 @keyframes scaleCirc {
@@ -23,12 +23,13 @@
     transform: scale(0.8);
     opacity: 0.7;
   }
-
-  90% {
-    transform: scale(2);
+  50% {
+    opacity: 0.5;
+  }
+  95% {
+    transform: scale(1.5);
     opacity: 0;
   }
-
   100% {
     transform: scale(0.8);
     opacity: 0;
@@ -40,8 +41,10 @@
     transform: scale(0.9);
     opacity: 1;
   }
-
-  90% {
+  50% {
+    opacity: 0.7;
+  }
+  95% {
     transform: scale(2.5);
     opacity: 0;
   }
@@ -56,13 +59,31 @@
   animation: rotateIcon 15s infinite linear;
 }
 
+/* -- Problem -- */
+.is-visible .problem-line {
+  stroke-dasharray: 6500;
+  stroke-dashoffset: 2000;
+  animation: problemDash 2.5s linear forwards;
+  transform-box: content-box;
+  transform-origin: top;
+}
+
+@keyframes problemDash {
+  0% {
+    stroke-dashoffset: 2000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
 /* -- Solution -- */
 /* 1st card */
-.talent_solution_bg-circ-bg {
+.is-visible .talent_solution_bg-circ-bg {
   transition-property: opacity;
   transition-duration: 600ms;
   will-change: transform, border-radius, opacity;
-  animation: scaleCircSmall 2.75s infinite ease-in-out;
+  animation: scaleCircSmall 2.5s infinite ease-in-out;
   border: 1px solid #f5e181;
   z-index: -2;
 }
@@ -76,22 +97,26 @@
 }
 
 /* 2nd card */
-#plus-icon {
+.is-visible #plus-icon {
   animation: rotateIcon 5s infinite linear;
   transform-box: content-box;
   transform-origin: center;
 }
 
 #line-1 {
+  transform: translateX(-30%);
   transform-box: view-box;
+}
+
+.is-visible #line-1 {
   animation: gridHighlight 7s infinite linear;
 }
 
 @keyframes gridHighlight {
   0% {
-    transform: translateX(-75%);
+    transform: translateX(-30%);
   }
-
+  70%,
   100% {
     transform: translateX(100%);
   }
@@ -99,8 +124,11 @@
 
 #line-2 {
   transform-box: view-box;
+  transform: translateX(75%);
+}
+
+.is-visible #line-2 {
   animation: gridHighlight2 7s infinite linear 3.5s;
-  transform: translateX(50%);
 }
 
 @keyframes gridHighlight2 {
@@ -115,25 +143,85 @@
 
 /* 3rd card */
 #bg-square-1,
-#bg-square-2,
-#bg-square-group rect {
-  animation: rotateSquare 8s infinite ease-in-out;
+#bg-square-2 {
   transform-box: content-box;
   transform-origin: center;
+  transform: translateY(-100px);
 }
 
-@keyframes rotateSquare {
+.is-visible #bg-square-1,
+.is-visible #bg-square-2 {
+  animation: moveSquare 7s infinite linear;
+}
+
+@keyframes moveSquare {
   0% {
-    transform: scale(1) rotate(0deg);
+    transform: scale(1) translateY(-100px);
+    opacity: 1;
   }
-  40% {
-    transform: scale(0.5) rotate(225deg);
+  80%,
+  100% {
+    transform: scale(1) translateY(200px);
+    opacity: 0.5;
   }
-  80% {
-    transform: scale(1) rotate(360deg);
+}
+
+/* Solution - 4th card */
+#group-1,
+#group-2,
+#group-3 {
+  opacity: 0;
+}
+.is-visible #group-1 {
+  animation: squareOpacity1 15s ease infinite;
+}
+.is-visible #group-2 {
+  animation: squareOpacity2 15s ease infinite;
+}
+.is-visible #group-3 {
+  animation: squareOpacity3 15s ease infinite;
+}
+
+@keyframes squareOpacity1 {
+  0% {
+    opacity: 0;
   }
-  80.00001% {
-    transform: scale(1) rotate(0deg);
+  10%,
+  20% {
+    opacity: 0.7;
+  }
+  33%,
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes squareOpacity2 {
+  0%,
+  33% {
+    opacity: 0;
+  }
+  43%,
+  53% {
+    opacity: 0.7;
+  }
+  66%,
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes squareOpacity3 {
+  0%,
+  66% {
+    opacity: 0;
+  }
+  76%,
+  86% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
@@ -222,6 +310,139 @@
   100% {
     transform: translateZ(0) translate(300px, -100px) rotate(65deg);
   }
+}
+
+/* 3rd card */
+.offeriings_bg-circ {
+  transition-property: opacity;
+  transition-duration: 600ms;
+  will-change: transform, border-radius, opacity;
+  animation: scaleCircSmall 2.5s infinite ease-in-out;
+  border: 1px solid #333da3;
+  z-index: -2;
+}
+/*
+.offerings_bg-path {
+  -webkit-mask-image: url(https://uploads-ssl.webflow.com/65776646d74b9f7b4f3cacf1/657e3c4ffe6a1b80f057a3da_Rectangle%20828177.svg);
+  mask-image: url(https://uploads-ssl.webflow.com/65776646d74b9f7b4f3cacf1/657e3c4ffe6a1b80f057a3da_Rectangle%20828177.svg);
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+}
+
+.offerings_bg-track-gradient {
+  animation: track-line 5s linear infinite;
+  transform: translate(-50%, -50%) rotate(0);
+}
+
+@keyframes track-line {
+  0% {
+    top: 0%;
+    left: 0;
+  }
+  20% {
+    top: 0%;
+    left: 100%;
+  }
+  21% {
+    transform: translate(-50%, -50%) rotate(0);
+  }
+  50% {
+    top: 100%;
+    left: 100%;
+  }
+  75% {
+    top: 100%;
+    left: 0%;
+  }
+  100% {
+    top: 0%;
+    left: 0%;
+  }
+}
+*/
+
+/* ---- Global ---- */
+/* 
+.wf-design-mode .marquee_track {
+  animation: none;
+}
+*/
+
+/* Logos */
+.logos_divider_icon {
+  animation: rotateIcon 5s linear infinite;
+}
+
+.talent_solution_bg.is-4 rect {
+  transform-box: content-box;
+  transform-origin: center;
+}
+
+.talent_solution_bg.is-4 rect {
+  transform-box: content-box;
+  transform-origin: center;
+}
+
+/* -- Process -- */
+.process_text.is-active .process_icon {
+  border-color: #ccd4ff;
+  box-shadow: 0px 0px 7px 0px #cac9ff,
+    0px 0px 11px 0px rgba(185, 192, 255, 0.85) inset;
+  color: #8c97ff;
+}
+
+.process_text.is-active .is-process_title {
+  color: #eee;
+}
+
+/* Nav */
+.nav_menu-link,
+.footer_link {
+  position: relative;
+  transition: color 0.2s linear;
+}
+
+.nav_menu-link:hover,
+.footer_link:hover,
+.footer_link.w--current {
+  color: #fff;
+}
+
+.nav_menu-link.current:after,
+.nav_menu-link:hover:after,
+.footer_link.current:after,
+.footer_link:hover:after {
+  transform: scale(1);
+  transform-origin: left;
+}
+
+.nav_menu-link:after,
+.footer_link:after {
+  content: "";
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #fff;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
+  will-change: transform;
+}
+
+.footer_link:after {
+  bottom: -3px;
+}
+
+.dropdown .nav_menu-link:after,
+.w--current.nav_menu-link:after,
+.w--current.footer_link:after {
+  display: none;
 }
 
 /* -- Footer Logo -- */
@@ -333,68 +554,4 @@
 .footer_logo-embed {
   transition: transform 0.5s ease;
   transform-origin: 50% 50% 0px;
-}
-
-/* -- Process -- */
-.process_text.is-active .process_icon {
-  border-color: #ccd4ff;
-  box-shadow: 0px 0px 7px 0px #cac9ff,
-    0px 0px 11px 0px rgba(185, 192, 255, 0.85) inset;
-  color: #8c97ff;
-}
-
-.process_text.is-active .is-process_title {
-  color: #eee;
-}
-
-/* 
-.wf-design-mode .marquee_track {
-  animation: none;
-}
-*/
-
-/* Nav */
-.nav_menu-link,
-.footer_link {
-  position: relative;
-  transition: color 0.2s linear;
-}
-
-.nav_menu-link:hover,
-.footer_link:hover,
-.footer_link.w--current {
-  color: #fff;
-}
-
-.nav_menu-link.current:after,
-.nav_menu-link:hover:after,
-.footer_link.current:after,
-.footer_link:hover:after {
-  transform: scale(1);
-  transform-origin: left;
-}
-
-.nav_menu-link:after,
-.footer_link:after {
-  content: "";
-  position: absolute;
-  bottom: 4px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: #fff;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
-  will-change: transform;
-}
-
-.footer_link:after {
-  bottom: -3px;
-}
-
-.dropdown .nav_menu-link:after,
-.w--current.nav_menu-link:after,
-.w--current.footer_link:after {
-  display: none;
 }
