--- a/head.css
+++ b/head.css
@@ -9,7 +9,7 @@
   transition-duration: 600ms;
   will-change: transform, border-radius, opacity;
   animation: scaleCirc 2.5s infinite paused;
-  border: 1px solid rgb(202 204 255 / 30%);
+  border: 1px solid rgba(202 204 255 / 30%);
   z-index: -2;
 }
 
