--- a/staging/main.css
+++ b/staging/main.css
@@ -783,3 +783,88 @@
     transform-origin: 50% 50% 0px;
   }
 }
+
+/*** microlab ***/
+/** Services **/
+.is-visible .focuses_bg-web-line,
+.is-visible .app-stroke,
+.is-visible .focuses_bg-ui-gradient {
+  animation-play-state: running;
+}
+
+/* services - 1st */
+.focuses_bg-web-path {
+  -webkit-mask-image: url("https://uploads-ssl.webflow.com/659db7c2c44654edbda79964/65a94d48f231e15f7b083cdc_Group%201413371691%20(1).svg");
+  mask-image: url("https://uploads-ssl.webflow.com/659db7c2c44654edbda79964/65a94d48f231e15f7b083cdc_Group%201413371691%20(1).svg");
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: 50% 0%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: 50% 0%;
+}
+
+.focuses_bg-web-line {
+  animation: webLine 6s infinite linear paused;
+}
+
+@keyframes webLine {
+  0% {
+    transform: translateY(200%);
+  }
+  35%,
+  100% {
+    transform: translateY(-125%);
+  }
+}
+
+/* services - 2nd */
+.app-stroke {
+  transform-origin: center;
+  transform-box: fill-box;
+  z-index: -5;
+  animation: appStroke 6s infinite ease-in-out paused;
+}
+
+@keyframes appStroke {
+  0%,
+  35% {
+    transform: scale(1);
+    opacity: 0.5;
+  }
+  45% {
+    opacity: 0.7;
+  }
+  65%,
+  100% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+}
+
+/* services - 3rd */
+.focuses_bg-ui-path {
+  -webkit-mask-image: url("https://uploads-ssl.webflow.com/659db7c2c44654edbda79964/65a81bf4fb775eba8e90a229_Group%201413371695.svg");
+  mask-image: url("https://uploads-ssl.webflow.com/659db7c2c44654edbda79964/65a81bf4fb775eba8e90a229_Group%201413371695.svg");
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: 50% 0%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: 50% 0%;
+}
+
+.focuses_bg-ui-gradient {
+  animation: uiGradient 6s infinite ease-in-out paused;
+}
+
+@keyframes uiGradient {
+  0%,
+  65% {
+    transform: translateY(200%);
+  }
+
+  100% {
+    transform: translateY(-125%);
+  }
+}
